[gd_scene load_steps=7 format=2]

[ext_resource path="res://Code/SceneScripts/Features/Feature_RigidBodyManipulation.gd" type="Script" id=1]
[ext_resource path="res://Assets/materials/Cutter.material" type="Material" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.1

[sub_resource type="SphereShape" id=2]
radius = 0.05

[sub_resource type="CapsuleShape" id=3]
radius = 0.0184542

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.01
bottom_radius = 0.01
height = 4.0

[node name="Feature_RigidBodyManipulation" type="Spatial"]
script = ExtResource( 1 )

[node name="InteractiveArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 0

[node name="InteractiveAreaShape" type="CollisionShape" parent="InteractiveArea"]
shape = SubResource( 1 )

[node name="CollisionKinematicBody" type="KinematicBody" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionBodyShape" type="CollisionShape" parent="CollisionKinematicBody"]
shape = SubResource( 2 )
disabled = true

[node name="HingeJoint" type="HingeJoint" parent="."]
nodes/node_a = NodePath("../CollisionKinematicBody")
params/bias = 0.99
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0
angular_limit/bias = 0.99
angular_limit/relaxation = 0.5

[node name="Cutter" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Cutter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.425861 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Cutter"]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 0, -0.950383 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[connection signal="body_entered" from="InteractiveArea" to="." method="_on_InteractiveArea_body_entered"]
[connection signal="body_exited" from="InteractiveArea" to="." method="_on_InteractiveArea_body_exited"]
